[gd_scene load_steps=3 format=3 uid="uid://p14fcmrepdws"]

[ext_resource type="Theme" uid="uid://bvudsuymnp2kj" path="res://core/resources/theme/asteroid_theme.tres" id="1_cjlnw"]
[ext_resource type="Script" uid="uid://b4kmmnyxmcs5m" path="res://core/UI/scripts/enter_name_field.gd" id="2_c6afh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cjlnw")
script = ExtResource("2_c6afh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 29

[node name="congrats" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CONGRATULATIONS
NEW HIGHSCORE"
horizontal_alignment = 1

[node name="score_text" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "_score_text"

[node name="field_enter_name" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "ENTER NAME HERE"
alignment = 1
expand_to_text_length = true
flat = true

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/field_enter_name" to="." method="_on_field_enter_name_text_submitted"]
